[package]
name = "network_vis"
description = "Network visualization"
authors = ["LonnonjamesD <Limón#7879>"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/LonnonDev/network_vis_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
